为历史对话列表添加缓存，添加自定义序列化规则防止Json字符串被转义。